--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -24,6 +25,7 @@
     "ajv": "^6.4.0",
     "angular-tree-component": "^7.1.0",
     "core-js": "^2.4.1",
+    "ngx-contextmenu": "^4.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
